--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.5"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.3.5",
+    "validator": "^13.9.0"
   }
 }
